--- a/index.html
+++ b/index.html
@@ -6,27 +6,57 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css"
     />
+    <link rel="stylesheet" href="index.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
+      $(document).ready(function () {
+        $("#root").show();
+        $("#root").load("promise/theory.html");
+      });
+
       function btnPromiseClick() {
-        var srcPromise = document.createElement("script");
-        srcPromise.src = "promise/code.js";
-        srcPromise.type = "text/javascript";
-        document.body.appendChild(srcPromise);
+        $("#root").load("promise/theory.html");
       }
 
       function btnAsyncClick() {
-        var srcAsyncAwait = document.createElement("script");
-        srcAsyncAwait.src = "async-await/code.js";
-        srcAsyncAwait.type = "text/javascript";
-        document.body.appendChild(srcAsyncAwait);
+        $("#root").load("async-await/theory.html");
       }
+
+      function btnHoistingClick() {
+        $("#root").load("hoisting/theory.html");
+      }
+
+      function btnHOFClick() {
+        $("#root").load("hof/theory.html");
+      }
+
+      function btnClosuresClick() {
+        $("#root").load("closures/theory.html");
+      }
+
+      function btnCallMethodClick() {
+        $("#root").load("call/theory.html");
+      }
+
+      function btnApplyMethodClick() {
+        $("#root").load("apply/theory.html");
+      }
+
+      function btnBindMethodClick() {
+        $("#root").load("bind/theory.html");
+      }
+
+      function btnCurryingClick() {
+        $("#root").load("currying/theory.html");
+      }
+      function btnInterviewQuestionsClick() {}
     </script>
   </head>
 
   <body>
     <p></p>
-    <h1>Learn Javascript With Hema</h1>
-    <div class="ui segment">
+    <h1 style="margin-bottom: 2px">Learn Javascript With Hema</h1>
+    <div class="ui raised segment">
       <button
         class="ui orange button"
         id="btn-promise"
@@ -41,24 +71,38 @@
         <i class="hand paper outline icon"></i>
         Async-Await
       </button>
-      <button class="ui red button">Red</button>
-      <button class="ui orange button">Orange</button>
-      <button class="ui yellow button">Yellow</button>
-      <button class="ui olive button">Olive</button>
-      <button class="ui green button">Green</button>
-      <button class="ui teal button">Teal</button>
-      <button class="ui blue button">Blue</button>
-      <button class="ui violet button">Violet</button>
-      <button class="ui purple button">Purple</button>
-      <button class="ui pink button">Pink</button>
-      <button class="ui brown button" style="margin-top: 2rem">Brown</button>
-      <button class="ui grey button">Grey</button>
-      <button class="ui black button">Black</button>
+      <button class="ui brown button" onclick="btnHoistingClick()">
+        Hoisting
+      </button>
+      <button class="ui pink button" onclick="btnHOFClick()">HOF</button>
+      <button class="ui yellow button" onclick="btnClosuresClick()">
+        Closures
+      </button>
+
+      <button class="ui olive button" onclick="btnCallMethodClick()">
+        Call Methods
+      </button>
+
+      <button class="ui orange button" onclick="btnApplyMethodClick()">
+        Apply Methods
+      </button>
+
+      <button class="ui teal button" onclick="btnBindMethodClick()">
+        Bind Methods
+      </button>
+      <button class="ui grey button" onclick="btnCurryingClick()">
+        Currying
+      </button>
+      <button class="ui violet button" onclick="btnInterviewQuestionsClick()">
+        Interview Questions
+      </button>
     </div>
+    <div class="ui segment" id="root"></div>
 
     <!-- scripts are added here -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.js"></script>
+
     <!-- <script src="/promise/code.js"></script> -->
   </body>
 </html>
