--- a/bind/theory.html
+++ b/bind/theory.html
@@ -1,11 +1,27 @@
 <html>
   <head>
     <title>Bind Method</title>
-    <script src="bind-method/bind.js"></script>
   </head>
   <body>
     <script>
-      $(document).ready(function () {});
+      $(document).ready(function () {
+        var person1 = {
+          name: "Hemalata",
+          displayName: function () {
+            console.log(this.name);
+          },
+        };
+
+        var person2 = {
+          name: "Tina Muni",
+        };
+
+        var person = person1.displayName.bind(person2);
+
+        // bind returns a new function which can be invoked at later point whenever needed
+
+        person();
+      });
     </script>
 
     <div class="beautify">
