call, bind, apply, currying, array methods

--- a/apply/theory.html
+++ b/apply/theory.html
@@ -20,7 +20,7 @@
 
     <div class="beautify">
       <h1>Apply Methods:</h1>
-      <p style="cursor: pointer; float: right; color: orangered">
+      <p style="color: orangered">
         <b><u>Open browser console to view the output</u></b>
       </p>
       <p>
