--- a/bind/theory.html
+++ b/bind/theory.html
@@ -31,7 +31,7 @@
         directly because bind method returns a new function which can be invoked
         at later point of view
       </p>
-      <p style="cursor: pointer; float: right; color: orangered">
+      <p style="color: orangered">
         <b><u>Open browser console to view the output</u></b>
       </p>
       <p><u>Below is the example</u></p>
