--- a/async-await/theory.html
+++ b/async-await/theory.html
@@ -19,7 +19,7 @@
     </script>
     <div class="beautify">
       <h1>Async-Await</h1>
-      <p style="cursor: pointer; float: right; color: orangered">
+      <p style="color: orangered">
         <b><u>Open browser console to view the output</u></b>
       </p>
       <p>
