--- a/call/theory.html
+++ b/call/theory.html
@@ -24,7 +24,7 @@
 
     <div class="beautify">
       <h1>Call Methods:</h1>
-      <p style="cursor: pointer; float: right; color: orangered">
+      <p style="color: orangered">
         <b><u>Open browser console to view the output</u></b>
       </p>
 
