--- a/closures/theory.html
+++ b/closures/theory.html
@@ -17,7 +17,7 @@
     </script>
     <div class="beautify">
       <h1>Closures</h1>
-      <p style="cursor: pointer; float: right; color: orangered">
+      <p style="color: orangered">
         <b><u>Open browser console to view the output</u></b>
       </p>
       <p>
