--- a/currying/theory.html
+++ b/currying/theory.html
@@ -75,7 +75,7 @@
 
     <div class="beautify">
       <h1>Currying:</h1>
-      <p style="cursor: pointer; float: right; color: orangered">
+      <p style="color: orangered">
         <b><u>Open browser console to view the output</u></b>
       </p>
       <p>
