--- a/hof/theory.html
+++ b/hof/theory.html
@@ -60,7 +60,7 @@
     </script>
     <div class="beautify">
       <h1>Higher Order Function</h1>
-      <p style="cursor: pointer; float: right; color: orangered">
+      <p style="color: orangered">
         <b><u>Open browser console to view the output</u></b>
       </p>
       <p>
